--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css"
+</head>
 <body>
 
 <h1>What Can JavaScript Do?</h1>
 
-<p id="demo">JavaScript can change HTML content.</p>
-
-<button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Click Me!</button>
-
+<p id="cat">Der Burgermeister</p>
+<button type="button" onclick='document.getElementByID("cat").innerHTML = "Der Burgermeister hat ein katzenbaby!"''>Click Here</button>
 </body>
 </html>
