--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <h1>What Can JavaScript Do?</h1>
 
 <p id="cat">Der Burgermeister</p>
-<button type="button" onclick='document.getElementByID("cat").innerHTML = "Der Burgermeister hat ein katzenbaby!"''>Click Here</button>
+<button type="button" onclick='document.getElementByID("cat").innerHTML = "Der Burgermeister hat ein katzenbaby!"'>Click Here</button>
 </body>
 </html>
